# 2dEDMD_Movie

./: CMakeLists.txt  README.md  config.txt  main.cpp  viewer.cpp  visualize.py
include/: edmd2d.h  snapshot_io.h
src/: edmd2d.cpp
